<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CreateNewGroup</class>
 <widget class="QDialog" name="CreateNewGroup">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>New Group</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color: rgb(255, 170, 0);</string>
  </property>
  <widget class="QPushButton" name="pushButton">
   <property name="geometry">
    <rect>
     <x>139</x>
     <y>230</y>
     <width>110</width>
     <height>40</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>12</pointsize>
     <bold>true</bold>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton {
    border-radius: 10px;
    padding: 10px;
    background-color: #376fa6;
	color: &quot;white&quot;;
}

QPushButton:hover {
    background-color: #007600;
}

QPushButton:pressed {
    background-color: #888888;
}
</string>
   </property>
   <property name="text">
    <string>OK</string>
   </property>
  </widget>
  <widget class="QLabel" name="label_error">
   <property name="geometry">
    <rect>
     <x>60</x>
     <y>195</y>
     <width>275</width>
     <height>21</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">color: rgb(255, 255, 255);</string>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>57</x>
     <y>90</y>
     <width>281</width>
     <height>101</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="label_NameGroup">
      <property name="font">
       <font>
        <pointsize>12</pointsize>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>Name Group</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="lineEdit_NameGroup">
      <property name="styleSheet">
       <string notr="true">QLineEdit {
    border-radius: 10px;
    padding: 5px;
	background-color: rgb(255, 255, 255);
	
	font: 12pt &quot;Century&quot;;
}
</string>
      </property>
     </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_TitleGroup">
      <property name="font">
       <font>
        <pointsize>12</pointsize>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>Title Group</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
     <widget class="QLineEdit" name="lineEdit_TitleGroup">
      <property name="styleSheet">
       <string notr="true">QLineEdit {
    border-radius: 10px;
    padding: 5px;
	background-color: rgb(255, 255, 255);
	
	font: 12pt &quot;Century&quot;;
}
</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
